Add content to t_resolving_conrefs_and_keyrefs.dita

--- a/dita_localization_website.ditamap
+++ b/dita_localization_website.ditamap
@@ -30,7 +30,7 @@
         <topicref
             href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"/>
         <topicref
-            href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_keyrefs_and_conkeyrefs.dita"
+            href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_and_keyrefs.dita"
         />
     </topichead>
     <topichead navtitle="Translating content in memoQ">
@@ -60,11 +60,13 @@
         </relrow>
         <relrow>
             <relcell>
-                <topicref href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"/>
+                <topicref
+                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"
+                />
             </relcell>
             <relcell>
                 <topicref
-                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_keyrefs_and_conkeyrefs.dita"/>
+                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_and_keyrefs.dita"/>
                 <topicref
                     href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_organizing_your_project_structure.dita"
                 />
@@ -113,7 +115,9 @@
                 />
             </relcell>
             <relcell>
-                <topicref href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"/>
+                <topicref
+                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"
+                />
             </relcell>
         </relrow>
         <relrow>
@@ -143,11 +147,13 @@
         <relrow>
             <relcell>
                 <topicref
-                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_keyrefs_and_conkeyrefs.dita"
+                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_and_keyrefs.dita"
                 />
             </relcell>
             <relcell>
-                <topicref href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"/>
+                <topicref
+                    href="topics/2_preparing_dita_content_for_localization_in_oxygen/c_content_reuse.dita"
+                />
             </relcell>
         </relrow>
         <relrow>
