--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_and_keyrefs.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/t_resolving_conrefs_and_keyrefs.dita
@@ -6,7 +6,42 @@
         content.</shortdesc>
     <taskbody>
         <context>When preparing your project for localization, it may be useful to replace content
-            references (conrefs) and key references (keyrefs) with content. To resolve all conrefs
-            and keyrefs in a topic, follow these steps:<p/></context>
+            references (conrefs) and key references (keyrefs) with appropriate content. To resolve
+            all conrefs and keyrefs in a topic, follow these steps:</context>
+        <steps id="steps_f5z_kx2_kpb">
+            <step>
+                <cmd>Open a topic containing references and switch to the
+                        <uicontrol>Author</uicontrol> mode.</cmd>
+                <info>
+                    <fig id="fig_kl1_sx2_kpb">
+                        <image href="../../images/oxygen-author-mode.png" id="image_inj_sx2_kpb">
+                            <alt>Author mode in oXygen</alt>
+                        </image>
+                    </fig>
+                </info>
+            </step>
+            <step>
+                <cmd>Go to <menucascade>
+                        <uicontrol>DITA</uicontrol>
+                        <uicontrol>Replace All References with Content</uicontrol>
+                    </menucascade>.</cmd>
+                <info>
+                    <fig id="fig_jls_vx2_kpb">
+                        <image href="../../images/oxygen-replace-references.png"
+                            id="image_k4b_wx2_kpb">
+                            <alt>'DITA' menu in oXygen with the 'Replace All References with
+                                Content' option</alt>
+                        </image>
+                    </fig>
+                </info>
+            </step>
+        </steps>
+        <result id="result_emk_dy2_kpb">All references in the topic are replaced with content.<fig
+                id="fig_icy_2y2_kpb">
+                <image href="../../images/oxygen-resolving-result.png" id="image_s5k_fy2_kpb">
+                    <alt>A comparison of DITA code before and after resolving references. All
+                        references are replaced with appropriate content.</alt>
+                </image>
+            </fig></result>
     </taskbody>
 </task>
