--- a/topics/1_writing_with_localization_in_mind/c_translation_friendly_text.dita
+++ b/topics/1_writing_with_localization_in_mind/c_translation_friendly_text.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_translation_friendly_text">
-    <title>Writing translation-friendly text</title>
+    <title>Translation-friendly text</title>
     <shortdesc>Learn a few tips to make your text easier to translate and less likely to cause
         translation errors.</shortdesc>
     <conbody>
