--- a/topics/1_writing_with_localization_in_mind/c_glossaries.dita
+++ b/topics/1_writing_with_localization_in_mind/c_glossaries.dita
@@ -2,8 +2,45 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_glossaries">
     <title>Glossaries</title>
-    <shortdesc/>
+    <shortdesc>Learn the benefits of using glossaries in your localization process.</shortdesc>
     <conbody>
-        <p/>
+        <section id="section_ly1_shl_kpb">
+            <title>Consistency</title>
+            <p>Glossaries are the easiest way to improve consistency of translated text. Different
+                translators (or even the same translator) can translate the same term in various
+                ways. Giving them a glossary of approved translations can increase the consistency
+                of terminology in one project or different projects on the same product.</p>
+            <note id="note_owy_djl_kpb">Most CAT tools enable automatic terminology checks to ensure
+                a translator has used terms from the glossary. Although such checks are less useful
+                in languages in which grammatical forms of the same word can be very
+                different.</note>
+        </section>
+        <section id="section_b1n_whl_kpb">
+            <title>Non-translatable text</title>
+            <p>Glossaries can also specify text that should not be translated, such as brand
+                names.</p>
+        </section>
+        <section id="section_agl_yhl_kpb">
+            <title>Forbidden terms</title>
+            <p>If you don't want a given term to be tarnslated in a particular way, a glossary is
+                also a good place to specify that. For example, the word "pacemaker" can be
+                translated into Polish as "rozrusznik", but you want translators to use the less
+                colloquial "stymulator" instead.</p>
+        </section>
+        <section id="section_yld_d3l_kpb">
+            <title>Context</title>
+            <p>Glossaries can also provide context for each term, such as its definition.</p>
+        </section>
+        <section id="section_nry_sjl_kpb">
+            <title>Format</title>
+            <p>Glossaries (called term bases) can be developed directly in a CAT tool. Most CAT
+                tools have their own term base format, but you can use a universal format called
+                TermBase eXchange (TBX) to exchange term bases between different tools.</p>
+            <p>You can also prepare glossaries as CSV files in a spreadsheet editor and then import
+                them into a CAT tool.</p>
+            <fig id="fig_cjc_mml_kpb">
+                <title>An example of a simple dictionary developed in a spreadsheet editor</title>
+            </fig>
+        </section>
     </conbody>
 </concept>
