Add image to c_glossaries.dita

--- a/topics/1_writing_with_localization_in_mind/c_glossaries.dita
+++ b/topics/1_writing_with_localization_in_mind/c_glossaries.dita
@@ -40,6 +40,10 @@
                 them into a CAT tool.</p>
             <fig id="fig_cjc_mml_kpb">
                 <title>An example of a simple dictionary developed in a spreadsheet editor</title>
+                <image href="../../images/writing-glossary.png" id="image_urr_4pl_kpb"/>
+                <image>
+                    <alt>A simple bilingual glossary developed in a spreadsheet editor</alt>
+                </image>
             </fig>
         </section>
     </conbody>
