--- a/topics/1_writing_with_localization_in_mind/c_glossaries.dita
+++ b/topics/1_writing_with_localization_in_mind/c_glossaries.dita
@@ -39,6 +39,7 @@
             <p>You can also prepare glossaries as CSV files in a spreadsheet editor and then import
                 them into a CAT tool.</p>
             <fig id="fig_cjc_mml_kpb">
+                <title>A simple bilingual glossary developed in a spreadsheet editor</title>
                 <image href="../../images/writing-glossary.png" id="image_urr_4pl_kpb">
                     <alt>A simple bilingual glossary developed in a spreadsheet editor</alt>
                 </image>
