--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_project_structure.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_project_structure.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="c_project_structure">
     <title>Project structure</title>
-    <shortdesc>Learn how to orgnize your project to make localization easier.</shortdesc>
+    <shortdesc>Learn how to organize your project to make localization easier.</shortdesc>
     <conbody>
         <section id="section_lhh_cpn_kpb">
             <title>Folder structure</title>
