--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_text_sorting.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="c_text_sorting">
+<concept id="c_text_sorting" xml:lang="en-US">
     <title>Text sorting</title>
     <shortdesc/>
     <conbody>
