--- a/topics/2_preparing_dita_content_for_localization_in_oxygen/c_preparing_dita_code_for_localization.dita
+++ b/topics/2_preparing_dita_content_for_localization_in_oxygen/c_preparing_dita_code_for_localization.dita
@@ -11,9 +11,9 @@
                 planning localization at the moment. To specify the language and country of a topic
                 or map, set the <codeph>xml:lang</codeph> attribute of its root element:</p>
             <codeblock id="codeblock_gyh_4ns_kpb">&lt;concept id="c_magic_tricks_vs_the_real_thing" xml:lang="en-US"></codeblock>
-            <note id="note_set_attr" type="tip">To set an element attribute in oXygen, press
-                    <uicontrol>Alt + Enter</uicontrol> and type the name of the attribute you want
-                to set.</note>
+            <note id="note_set_attr" type="tip">To set an attribute of an element in oXygen, select
+                the element, press <uicontrol>Alt + Enter</uicontrol>, and type the name of the
+                attribute you want to set.</note>
         </section>
         <section id="section_gt2_zks_kpb">
             <title>Identifying content not to be translated</title>
